<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="Calculate">Calculate</string>
    <string name="Clear">Clear</string>
    <string name="Tip">Tip %</string>
    <string name="CustomTip">Enter Tip %</string>

    <string name="GuestCount"># of people</string>
    <string name="EnterBillAmount">Enter Bill Amount</string>
    <string name="AddHST">Add H.S.T</string>
    <string name="HST">1.13</string>

    <string name="tiptotal">Tip is: $</string>
    <string name="totaltotal">Total is: $</string>
    <string name="splittotal">Per Person: $</string>

    <string-array name="guestcounts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="tipchoices">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>Other</item>
    </string-array>

</resources>
